--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -1,5 +1,8 @@
 name: GitHub Actions Demo
-on: [push]
+on:
+  issues:
+    types: [opened]
+
 jobs:
   Explore-GitHub-Actions:
     runs-on: ubuntu-latest
@@ -15,3 +18,8 @@ jobs:
         run: |
           ls ${{ github.workspace }}
       - run: echo "🍏 This job's status is ${{ job.status }}."
+
+  Test-Issue-Open:
+    runs-on: ubuntu-latest
+    steps:
+      - run: echo "issue-name=${{ github.event.issue.title }}"
