--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -14,6 +14,8 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: '3.7'
+      - name: Install packages
+        run: pip install tabulate
       - name: Update README
         run: python update.py "${{ github.event.issue.title }}"
       - name: Commit
