--- a/.github/workflows/gobang.yml
+++ b/.github/workflows/gobang.yml
@@ -1,10 +1,10 @@
-name: GitHub Actions Demo
+name: Gobang
 on:
   issues:
     types: [opened]
 
 jobs:
-  Test-Issue-Open:
+  Play-Gobang:
     runs-on: ubuntu-latest
     steps:
       - run: echo "issue-name=${{ github.event.issue.title }}"
